CRG changes apostrophe and spacing issue

--- a/300x250/css/styles.css
+++ b/300x250/css/styles.css
@@ -281,7 +281,7 @@ body{ margin: 0; padding: 0; font-family: 'Allstate Sans', Arial, Helvetica, san
 	line-height: 24px;
 	top:115px;
 	width: 300px;
-	left:15px;
+	left:10px;
 	text-align: center;
 }
 .CFR{
